Fix for saving simulation time and replaying it